--- a/index.html
+++ b/index.html
@@ -1,40 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+    <link rel="stylesheet" href="./styles/mobile.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+    <script src="./scripts/email_validation.js" defer></script>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+  </head>
+  <body>
+    <main>
+      <div class="card-container">
+        <picture class="card-hero-picture">
+          <source
+            media="(min-width:650px)"
+            srcset="./images/illustration-woman-online-desktop.svg"
+          />
+          <img
+            src="./images/illustration-woman-online-mobile.svg"
+            alt="A rectangle-shaped floor. Shapes are simplified"
+          />
+        </picture>
+        <img
+          src="./images/illustration-box-desktop.svg"
+          alt=""
+          class="box-image"
+        />
+        <h1 class="card-heading">FAQ</h1>
+        <ul class="questions-list">
+          <li class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                id="accordion-header-1"
+                aria-controls="accordion-panel-1"
+                aria-expanded="false"
+                data-accordion-header
+              >
+                <p class="question">How many team members can I invite?</p>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="Arrow icon - click it to show/hide the answer"
+                  class="icon-arrow"
+                />
+              </button>
+            </h2>
+            <section
+              class="accordion-panel"
+              id="accordion-panel-1"
+              aria-labelledby="accordion-header-1"
+              hidden
+            >
+              <p class="answer">
+                You can invite up to 2 additional users on the Free plan. There
+                is no limit on team members for the Premium plan.
+              </p>
+            </section>
+          </li>
+          <li class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                id="accordion-header-2"
+                aria-controls="accordion-panel-2"
+                aria-expanded="false"
+                data-accordion-header
+              >
+                <p class="question">What is the maximum file upload size?</p>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="Arrow icon - click it to show/hide the answer"
+                  class="icon-arrow"
+                />
+              </button>
+            </h2>
+            <section
+              class="accordion-panel"
+              id="accordion-panel-2"
+              aria-labelledby="accordion-header-2"
+              hidden
+            >
+              <p class="answer">
+                No more than 2GB. All files in your account must fit your
+                allotted storage space.
+              </p>
+            </section>
+          </li>
+          <li class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                id="accordion-header-3"
+                aria-controls="accordion-panel-3"
+                aria-expanded="false"
+                data-accordion-header
+              >
+                <p class="question">How do I reset my password?</p>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="Arrow icon - click it to show/hide the answer"
+                  class="icon-arrow"
+                />
+              </button>
+            </h2>
+            <section
+              class="accordion-panel"
+              id="accordion-panel-3"
+              aria-labelledby="accordion-header-3"
+              hidden
+            >
+              <p class="answer">
+                Click “Forgot password” from the login page or “Change password”
+                from your profile page. A reset link will be emailed to you.
+              </p>
+            </section>
+          </li>
+          <li class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                id="accordion-header-4"
+                aria-controls="accordion-panel-4"
+                aria-expanded="false"
+                data-accordion-header
+              >
+                <p class="question">Can I cancel my subscription?</p>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="Arrow icon - click it to show/hide the answer"
+                  class="icon-arrow"
+                />
+              </button>
+            </h2>
+            <section
+              class="accordion-panel"
+              id="accordion-panel-4"
+              aria-labelledby="accordion-header-4"
+              hidden
+            >
+              <p class="answer">
+                Yes! Send us a message and we’ll process your request no
+                questions asked.
+              </p>
+            </section>
+          </li>
+          <li class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                id="accordion-header-5"
+                aria-controls="accordion-panel-5"
+                aria-expanded="false"
+                data-accordion-header
+              >
+                <p class="question">Do you provide additional support?</p>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="Arrow icon - click it to show/hide the answer"
+                  class="icon-arrow"
+                />
+              </button>
+            </h2>
+            <section
+              class="accordion-panel"
+              id="accordion-panel-5"
+              aria-labelledby="accordion-header-5"
+              hidden
+            >
+              <p class="answer">
+                Chat and email support is available 24/7. Phone lines are open
+                during normal business hours.
+              </p>
+            </section>
+          </li>
+        </ul>
+      </div>
+    </main>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
