--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
   <body>
     <main>
       <div class="card-container">
-        <picture class="card-hero-picture">
-          <source
-            media="(min-width:650px)"
-            srcset="./images/illustration-woman-online-desktop.svg"
-          />
+        <div class="pictures-container">
+          <picture class="card-hero-picture">
+            <source
+              media="(min-width:650px)"
+              srcset="./images/illustration-woman-online-desktop.svg"
+            />
+            <img
+              src="./images/illustration-woman-online-mobile.svg"
+              alt="A rectangle-shaped floor. Shapes are simplified"
+            />
+          </picture>
           <img
-            src="./images/illustration-woman-online-mobile.svg"
-            alt="A rectangle-shaped floor. Shapes are simplified"
+            src="./images/illustration-box-desktop.svg"
+            alt=""
+            class="box-image"
           />
-        </picture>
-        <img
-          src="./images/illustration-box-desktop.svg"
-          alt=""
-          class="box-image"
-        />
+        </div>
+
         <h1 class="card-heading">FAQ</h1>
         <ul class="questions-list">
           <li class="accordion-item">
@@ -186,11 +189,11 @@
         </ul>
       </div>
     </main>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </footer>
   </body>
 </html>
