Added aria-hidden attribute

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
             />
             <img
               src="./images/illustration-woman-online-mobile.svg"
-              alt="A rectangle-shaped floor. Shapes are simplified"
+              aria-hidden="true"
+              alt=""
             />
           </picture>
           <img
             src="./images/illustration-box-desktop.svg"
+            aria-hidden="true"
             alt=""
             class="box-image"
           />
