Changed script name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/mobile.css" />
     <link rel="stylesheet" href="./styles/reset.css" />
 
-    <script src="./scripts/email_validation.js" defer></script>
+    <script src="./scripts/accordion.js" defer></script>
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
   </head>
@@ -197,7 +197,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/spaprocki"
+        >Your Name Here</a
+      >.
     </footer>
   </body>
 </html>
