Changed box styles

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a href="https://www.frontendmentor.io/profile/spaprocki"
-        >Your Name Here</a
+      <a href="https://www.frontendmentor.io/profile/spaprocki" target="_blank"
+        >paprockis</a
       >.
     </footer>
   </body>
