--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
             />
           </picture>
         </div>
-        <img
-          src="./images/illustration-box-desktop.svg"
-          aria-hidden="true"
-          alt=""
-          class="box-image"
-        />
+        <div class="box-image-container">
+          <img
+            src="./images/illustration-box-desktop.svg"
+            aria-hidden="true"
+            alt=""
+            class="box-image"
+          />
+        </div>
+
         <div class="text-container">
           <h1 class="card-heading">FAQ</h1>
           <ul class="questions-list">
