--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <main>
       <div class="card-container">
-        <div class="pictures-container">
-          <picture class="card-hero-picture">
+        <div class="hero-picture-container">
+          <picture class="hero-picture">
             <source
               media="(min-width:768px)"
               srcset="./images/illustration-woman-online-desktop.svg"
@@ -34,12 +34,12 @@
             />
           </picture>
         </div>
-        <div class="box-image-container">
+        <div class="box-picture-container">
           <img
             src="./images/illustration-box-desktop.svg"
             aria-hidden="true"
             alt=""
-            class="box-image"
+            class="box-picture"
           />
         </div>
 
