deleted paragrapgh element from button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   aria-expanded="false"
                   data-accordion-header
                 >
-                  <p class="question">How many team members can I invite?</p>
+                  How many team members can I invite?
                   <img
                     src="./images/icon-arrow-down.svg"
                     alt="Arrow icon - click it to show/hide the answer"
@@ -84,7 +84,7 @@
                   aria-expanded="false"
                   data-accordion-header
                 >
-                  <p class="question">What is the maximum file upload size?</p>
+                  What is the maximum file upload size?
                   <img
                     src="./images/icon-arrow-down.svg"
                     alt="Arrow icon - click it to show/hide the answer"
@@ -113,7 +113,7 @@
                   aria-expanded="false"
                   data-accordion-header
                 >
-                  <p class="question">How do I reset my password?</p>
+                  How do I reset my password?
                   <img
                     src="./images/icon-arrow-down.svg"
                     alt="Arrow icon - click it to show/hide the answer"
@@ -143,7 +143,7 @@
                   aria-expanded="false"
                   data-accordion-header
                 >
-                  <p class="question">Can I cancel my subscription?</p>
+                  Can I cancel my subscription?
                   <img
                     src="./images/icon-arrow-down.svg"
                     alt="Arrow icon - click it to show/hide the answer"
@@ -172,7 +172,7 @@
                   aria-expanded="false"
                   data-accordion-header
                 >
-                  <p class="question">Do you provide additional support?</p>
+                  Do you provide additional support?
                   <img
                     src="./images/icon-arrow-down.svg"
                     alt="Arrow icon - click it to show/hide the answer"
