Added aria-label="hidden" to arrows

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                   How many team members can I invite?
                   <img
                     src="./images/icon-arrow-down.svg"
-                    alt="Arrow icon - click it to show/hide the answer"
+                    aria-hidden="true"
+                    alt=""
                     class="icon-arrow"
                   />
                 </button>
@@ -87,7 +88,8 @@
                   What is the maximum file upload size?
                   <img
                     src="./images/icon-arrow-down.svg"
-                    alt="Arrow icon - click it to show/hide the answer"
+                    aria-hidden="true"
+                    alt=""
                     class="icon-arrow"
                   />
                 </button>
@@ -116,7 +118,8 @@
                   How do I reset my password?
                   <img
                     src="./images/icon-arrow-down.svg"
-                    alt="Arrow icon - click it to show/hide the answer"
+                    aria-hidden="true"
+                    alt=""
                     class="icon-arrow"
                   />
                 </button>
@@ -146,7 +149,8 @@
                   Can I cancel my subscription?
                   <img
                     src="./images/icon-arrow-down.svg"
-                    alt="Arrow icon - click it to show/hide the answer"
+                    aria-hidden="true"
+                    alt=""
                     class="icon-arrow"
                   />
                 </button>
@@ -175,7 +179,8 @@
                   Do you provide additional support?
                   <img
                     src="./images/icon-arrow-down.svg"
-                    alt="Arrow icon - click it to show/hide the answer"
+                    aria-hidden="true"
+                    alt=""
                     class="icon-arrow"
                   />
                 </button>
